Более четкое разделение на xml и compose.