@@ -1,6 +1,6 @@
 plugins {
-    kotlin("jvm") version "2.3.10"
-    kotlin("plugin.serialization") version "2.3.10"
+    kotlin("jvm") version "2.3.20"
+    kotlin("plugin.serialization") version "2.3.20"
     application
 }
 
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     implementation(kotlin("stdlib"))
+    implementation("org.jetbrains.kotlin:kotlin-compiler-embeddable:2.3.20")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3")
     testImplementation(kotlin("test"))
 }
@@ -23,8 +24,10 @@ kotlin {
 
 application {
     mainClass.set("ru.itis.MainKt")
+    applicationDefaultJvmArgs = listOf("--sun-misc-unsafe-memory-access=allow")
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--sun-misc-unsafe-memory-access=allow")
 }
